# GEM

./: .gitignore  Cargo.toml  LICENSE  LICENSES.txt  README.md  build.rs  flatten_test.rs  usage.md
.cache/clangd/index/: kernel_v1.cu.FF9BA9B91A7FB3E5.idx
aigpdk/: aigpdk.lib  aigpdk.v  aigpdk_nomem.lib  memlib_yosys.txt
csrc/: kernel_v1.cu  kernel_v1_impl.cuh
src/: aig.rs  aigpdk.rs  flatten.rs  lib.rs  main.rs  pe.rs  repcut.rs  staging.rs
