[package]
name = "gem"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.15", features = ["derive"] }
clilog = { version = "0.2.5", registry = "zzdeps" }
compact_str = "0.7.1"
itertools = "0.13.0"
netlistdb = { version = "0.4.6", registry = "zzdeps" }
sverilogparse = { version = "0.4.2", registry = "zzdeps" }
vcd-ng = "0.1.2"

[patch.zzdeps]
netlistdb = { path = "../netlistdb" }
sverilogparse = { path = "../sverilogparse" }

[patch.crates-io]
vcd-ng = { path = "../vcd-ng" }
