[package]
name = "gem"
version = "0.1.0"
edition = "2021"

[dependencies]
cachedhash = "0.2.0"
clap = { version = "4.5.15", features = ["derive"] }
clilog = { version = "0.2.5", registry = "zzdeps" }
compact_str = "0.7.1"
indexmap = "2.4.0"
itertools = "0.13.0"
netlistdb = { version = "0.4.6", registry = "zzdeps" }
rand = "0.8.5"
rand_chacha = "0.3.1"
rayon = "1.10.0"
serde = { version = "1.0.208", features = ["derive"] }
serde_bare = "0.5.0"
sverilogparse = { version = "0.4.2", registry = "zzdeps" }
ulib = { version = "0.3.13", registry = "zzdeps" }
vcd-ng = "0.1.2"

[patch.zzdeps]
netlistdb = { path = "../netlistdb" }
sverilogparse = { path = "../sverilogparse" }

[patch.crates-io]
vcd-ng = { path = "../vcd-ng" }
